[gd_scene load_steps=4 format=2]

[ext_resource path="res://Objects/TempScene.gd" type="Script" id=1]
[ext_resource path="res://HUD/BaseInterface.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Fonts/BaseFont.tres" type="DynamicFont" id=3]

[node name="TempScene" type="Node2D"]
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 728.0
margin_top = 348.0
margin_right = 991.0
margin_bottom = 500.0
rect_scale = Vector2( 2.55901, 3.01243 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" parent="." instance=ExtResource( 2 )]
margin_left = 552.159
margin_top = 306.473
margin_right = 1373.16
margin_bottom = 728.473

[node name="NinePatchRect" parent="MarginContainer" index="0"]
margin_right = 821.0
margin_bottom = 422.0

[node name="MarginContainer" parent="MarginContainer" index="1"]
margin_right = 821.0
margin_bottom = 422.0

[node name="CenterContainer" parent="MarginContainer/MarginContainer" index="0"]
margin_right = 821.0
margin_bottom = 422.0

[node name="VBoxContainer" parent="MarginContainer/MarginContainer/CenterContainer" index="0"]
margin_left = 69.0
margin_top = 24.0
margin_right = 751.0
margin_bottom = 397.0

[node name="Label2" parent="MarginContainer/MarginContainer/CenterContainer/VBoxContainer" index="0"]
visible = false
margin_right = 896.0

[node name="TopLabel" type="Label" parent="MarginContainer/MarginContainer/CenterContainer/VBoxContainer" index="1"]
margin_right = 682.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Temp exploration scene"
uppercase = true

[node name="InputLabel" type="Label" parent="MarginContainer/MarginContainer/CenterContainer/VBoxContainer" index="2"]
margin_top = 36.0
margin_right = 682.0
margin_bottom = 68.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Input army size: "

[node name="TerritoryLabel" type="Label" parent="MarginContainer/MarginContainer/CenterContainer/VBoxContainer" index="3"]
margin_top = 72.0
margin_right = 682.0
margin_bottom = 104.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Input army size: "

[node name="Label3" type="Label" parent="MarginContainer/MarginContainer/CenterContainer/VBoxContainer" index="4"]
margin_top = 108.0
margin_right = 682.0
margin_bottom = 175.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "
Set scene outputs"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/MarginContainer/CenterContainer/VBoxContainer" index="5"]
margin_top = 179.0
margin_right = 682.0
margin_bottom = 211.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer/MarginContainer/CenterContainer/VBoxContainer/HBoxContainer"]
margin_right = 348.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Food discovered"

[node name="NewFood" type="SpinBox" parent="MarginContainer/MarginContainer/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 352.0
margin_right = 426.0
margin_bottom = 32.0

[node name="InvasionContainter" type="HBoxContainer" parent="MarginContainer/MarginContainer/CenterContainer/VBoxContainer" index="6"]
margin_top = 215.0
margin_right = 682.0
margin_bottom = 247.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer/MarginContainer/CenterContainer/VBoxContainer/InvasionContainter"]
margin_right = 316.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Won the fight?"

[node name="Result" type="CheckBox" parent="MarginContainer/MarginContainer/CenterContainer/VBoxContainer/InvasionContainter"]
margin_left = 320.0
margin_right = 344.0
margin_bottom = 32.0

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/MarginContainer/CenterContainer/VBoxContainer" index="7"]
margin_top = 251.0
margin_right = 682.0
margin_bottom = 283.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer/MarginContainer/CenterContainer/VBoxContainer/HBoxContainer2"]
margin_right = 500.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Ants that made it back"

[node name="BackAnts" type="SpinBox" parent="MarginContainer/MarginContainer/CenterContainer/VBoxContainer/HBoxContainer2"]
margin_left = 504.0
margin_right = 578.0
margin_bottom = 32.0

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/MarginContainer/CenterContainer/VBoxContainer" index="8"]
margin_top = 287.0
margin_right = 682.0
margin_bottom = 319.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer/MarginContainer/CenterContainer/VBoxContainer/HBoxContainer3"]
margin_right = 344.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "New gained ants"

[node name="NewAnts" type="SpinBox" parent="MarginContainer/MarginContainer/CenterContainer/VBoxContainer/HBoxContainer3"]
margin_left = 348.0
margin_right = 422.0
margin_bottom = 32.0

[node name="BaseButton" parent="MarginContainer/MarginContainer/CenterContainer/VBoxContainer" index="9"]
margin_top = 323.0
margin_right = 682.262
margin_bottom = 373.109
text = "Action done, back to world map"
[connection signal="pressed" from="MarginContainer/MarginContainer/CenterContainer/VBoxContainer/BaseButton" to="." method="_on_BaseButton_pressed"]

[editable path="MarginContainer"]
